Bug 783398 - DeviceStorage makes calls to nsVolumeService from the IOThread. r=dhylands

--HG--
extra : rebase_source : 8f3fef5b349f5810e256f8f5f4b6217854a03518